cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificExprsCheckLevel5.cif.check.err
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 120, column 13: The switch has only one "case", which will be deprecated in the future.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 127, column 13: The switch has only one "case", which will be deprecated in the future.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 320, column 13: The switch has only one "case", which will be deprecated in the future.
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ----------------------------------------------------------------
  (1/4) A user-defined function reference is used as a data value.
  ----------------------------------------------------------------
   * In group "USER_DEF_FUNC_REFS":
     - invariant g(intF);
                   ^
     - invariant g(extF);
                   ^

  --------------------------------------------------------------------------
  (2/4) An external user-defined function reference is used as a data value.
  --------------------------------------------------------------------------
   * In group "USER_DEF_FUNC_REFS":
     - invariant g(extF);
                   ^

  -------------------------------------------------------------------------
  (3/4) An internal user-defined function local variable reference is used.
  -------------------------------------------------------------------------
   * In user-defined function "INT_USER_DEF_FUNC_LOCAL_VAR_REFS.f":
     - return v;
              ^

  --------------------------------------------------------------------------
  (4/4) An internal user-defined function reference is used as a data value.
  --------------------------------------------------------------------------
   * In group "USER_DEF_FUNC_REFS":
     - invariant g(intF);
                   ^
